html index done

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>DatA-bae</title>
 </head>
 
 <body>
-
+    <header>
+        <div class="logo">
+            <a href="index.html">DatA-bae</a>
+        </div>
+        <div class="nav_button">
+            <a href="categories.html">Categories</a>
+        </div>
+    </header>
+    <main>
+        <h1>DatA-bae</h1>
+        <p>Love is in the App Store: <br> Let Us Help You Choose the <br> RIGHT ONE!</p>
+    </main>
 </body>
 
 </html>
