--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         </div>
     </header>
     <main>
-        <h1>DatA-bae</h1>
-        <p>Love is in the App Store: <br> Let Us Help You Choose the <br> RIGHT ONE!</p>
+        <div id="front_text">
+            <h1>DatA-bae</h1>
+            <p>Love is in the App Store: <br> Let Us Help You Choose the <br> RIGHT ONE!</p>
+        </div>
     </main>
 </body>
 
