--- a/categories.html
+++ b/categories.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <a href="index.html">DatA-bae</a>
+        </div>
+        <div class="nav_button">
+            <a href="categories.html">Categories</a>
+        </div>
+    </header>
     <main>
         <h1>Categories</h1>
         <div class="grid_1-1">
