--- a/categories.html
+++ b/categories.html
@@ -22,10 +22,10 @@
     <main>
         <h1>Categories</h1>
         <div class="grid_1-1">
-            <div class="category_box">Lgbt+</div>
-            <div class="category_box">Niche</div>
-            <div class="category_box">Fetish</div>
-            <div class="category_box">Conform</div>
+            <div class="category_box"><a href="productlist.html">Lgbt+</a></div>
+            <div class="category_box"><a href="productlist.html">Niche</a></div>
+            <div class="category_box"><a href="productlist.html">Fetish</a></div>
+            <div class="category_box"><a href="productlist.html">Conform</a></div>
         </div>
     </main>
 
