--- a/categories.html
+++ b/categories.html
@@ -22,10 +22,10 @@
     <main>
         <h1>Categories</h1>
         <div class="grid_1-1">
-            <div class="category_box"><a href="productlist.html">Lgbt+</a></div>
-            <div class="category_box"><a href="productlist.html">Niche</a></div>
-            <div class="category_box"><a href="productlist.html">Fetish</a></div>
-            <div class="category_box"><a href="productlist.html">Conform</a></div>
+            <a class="category_box" href="productlist.html">Lgbt+</a>
+            <a class="category_box" href="productlist.html">Niche</a>
+            <a class="category_box" href="productlist.html">Fetish</a>
+            <a class="category_box" href="productlist.html">Conform</a>
         </div>
     </main>
 
