work in progress

--- a/form.html
+++ b/form.html
@@ -23,22 +23,25 @@
         <h1>Add datingsite</h1>
         <div class="formbox">
             <form action="">
-                <label for="name">App Name:<input placeholder="Tinder" type="text"></label>
-                <label for="slogan">Slogan:<input placeholder='"Start Swiping"' type="text"></label>
-                <label for="">Category:
-                    <select name="Category" id="Category">
-                        <option value="choice">Choose category</option>
-                        <option value="LGBT+">LGBT+</option>
-                        <option value="Niche">Niche</option>
-                        <option value="Fetish">Fetish</option>
-                        <option value="Conform">Conform</option>
-                    </select>
-                </label>
-                <label for="description">Description <textarea placeholder="Max 200 characters (with spaces)" name=""
-                        rows="5" id="" cols="30" rows="10"></textarea></label>
-                <label for="founded">Founded: <input type="date"></label>
-                <label for="free">Free to use: <input type="checkbox"></label>
-
+                <label for="name">App Name:</label>
+                <input placeholder="Tinder" type="text">
+                <label for="slogan">Slogan:</label>
+                <input placeholder='"Start Swiping"' type="text">
+                <label for="">Category:</label>
+                <select name="Category" id="Category">
+                    <option value="choice">Choose category</option>
+                    <option value="LGBT+">LGBT+</option>
+                    <option value="Niche">Niche</option>
+                    <option value="Fetish">Fetish</option>
+                    <option value="Conform">Conform</option>
+                </select>
+                <label for="description">Description:</label><textarea placeholder="Max 200 characters (with spaces)"
+                    name="" rows="5" id="" cols="30" rows="10"></textarea>
+                <label for="founded">Founded:</label>
+                <input type="date">
+                <label for="free">Free to use:</label>
+                <input type="checkbox">
+                <button type="submit">Submit</button>
             </form>
         </div>
     </main>
