formside web færdig

--- a/form.html
+++ b/form.html
@@ -28,7 +28,7 @@
                 <label for="slogan">Slogan:</label>
                 <input placeholder='"Start Swiping"' type="text">
                 <label for="">Category:</label>
-                <select name="Category" id="Category">
+                <select name="category" id="category">
                     <option value="choice">Choose category</option>
                     <option value="LGBT+">LGBT+</option>
                     <option value="Niche">Niche</option>
