--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <title>Add a site</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="form.css">
 </head>
@@ -20,7 +20,7 @@
         </div>
     </header>
     <main>
-        <h1>Add datingsite</h1>
+        <h1>Add Dating Site</h1>
         <div class="formbox">
             <form action="">
                 <label for="name">App Name:</label>
