--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
         <div class="nav_button">
             <a href="categories.html">Categories</a>
+            <a href="form.html">Add a site</a>
         </div>
     </header>
     <main>
