--- a/form.html
+++ b/form.html
@@ -17,6 +17,7 @@
         </div>
         <div class="nav_button">
             <a href="categories.html">Categories</a>
+            <a href="form.html">Add a site</a>
         </div>
     </header>
     <main>
