--- a/productlist.html
+++ b/productlist.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="productlist.css" />
+    <title>DatA-bae</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="productlist.css" />
-  <title>DatA-bae</title>
-</head>
-
-<body>
-  <header>
-    <div class="logo">
-      <a href="index.html">DatA-bae</a>
-    </div>
-    <div class="nav_button">
-      <a href="categories.html">Categories</a>
-      <a href="form.html">Add a site</a>
-    </div>
-  </header>
-  <main>
-    <h1>Category</h1>
-    <article>
-      <h3>navn</h3>
-      <p class="slogan">slogan Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      <p class="free">Free</p>
-      <button>Read more</button>
-    </article>
-  </main>
-</body>
-
+  <body>
+    <header>
+      <div class="logo">
+        <a href="index.html">DatA-bae</a>
+      </div>
+      <div class="nav_button">
+        <a href="categories.html">Categories</a>
+        <a href="form.html">Add a site</a>
+      </div>
+    </header>
+    <main>
+      <h1>Category</h1>
+      <section class="box">
+        <div id="billede">
+          <img src="/img/badoo.webp" alt="tinder" />
+        </div>
+        <div id="indhold">
+          <h2>Facebookdating</h2>
+          <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
+          <button>Read more</button>
+        </div>
+        <p class="free">Free</p>
+      </section>
+    </main>
+  </body>
 </html>
