mobil-format og radio-box

--- a/productlist.html
+++ b/productlist.html
@@ -22,17 +22,59 @@
     </header>
     <main>
       <h1>Category</h1>
+      <div class="radio-box">
+        <form action="/action_page.php">
+        <input type="radio" id="affair" name="sub-category" value="affair">
+        <label for="affair">Affair</label>
+        <input type="radio" id="appearance" name="sub-category" value="appearance">
+        <label for="appearance">Appearance</label>
+        <input type="radio" id="education" name="sub-category" value="education">
+        <label for="education">Education</label>
+
+        <input type="radio" id="food" name="sub-category" value="food">
+        <label for="food">Food</label>
+        <input type="radio" id="gay" name="sub-category" value="gay">
+        <label for="gay">Gay/Trans</label>
+        <input type="radio" id="lesbian" name="sub-category" value="lesbian">
+        <label for="lesbian">Lesbian/Trans</label>
+
+        <input type="radio" id="partialism" name="sub-category" value="partialism">
+        <label for="partialism">Partialism</label>
+        <input type="radio" id="POC" name="sub-category" value="POC">
+        <label for="POC">POC</label>
+        <input type="radio" id="political" name="sub-category" value="political">
+        <label for="political">Political</label>
+
+        <input type="radio" id="polyamours" name="sub-category" value="polyamours">
+        <label for="polyamours">Polyamours</label>
+        <input type="radio" id="sugardating" name="sub-category" value="sugardating">
+        <label for="sugardating">Sugardating</label>
+        </div>
       <section class="box">
-        <div id="billede">
+        <p class="free">Free</p>
+        <div class="billede">
           <img src="/img/badoo.webp" alt="tinder" />
         </div>
-        <div id="indhold">
+        <div class="indhold">
           <h2>Facebookdating</h2>
           <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
           <button>Read more</button>
         </div>
-        <p class="free">Free</p>
       </section>
+      <section class="box">
+        <p class="free">Free</p>
+        <div class="billede">
+          <img src="/img/badoo.webp" alt="tinder" />
+        </div>
+        <div class="indhold">
+          <h2>Facebookdating</h2>
+          <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
+          <button>Read more</button>
+        </div>
+      </section>
+      <div class="heart">
+        <img src="/img/heart1.svg" alt="hjerte" />
+      </div>
     </main>
   </body>
 </html>
