rettelse af checkboks og indst js

--- a/productlist.html
+++ b/productlist.html
@@ -22,32 +22,32 @@
     </header>
     <main>
       <h1>Category</h1>
-      <div class="radio-box">
+      <div class="checkbox-box">
         <form action="/action_page.php">
-        <input type="radio" id="affair" name="sub-category" value="affair">
-        <label for="affair">Affair</label>
-        <input type="radio" id="appearance" name="sub-category" value="appearance">
+        <input type="checkbox"  id="affair" name="sub-category" value="affair">
+        <label  for="affair">Affair</label>
+        <input type="checkbox" id="appearance" name="sub-category" value="appearance">
         <label for="appearance">Appearance</label>
-        <input type="radio" id="education" name="sub-category" value="education">
+        <input type="checkbox" id="education" name="sub-category" value="education">
         <label for="education">Education</label>
 
-        <input type="radio" id="food" name="sub-category" value="food">
+        <input type="checkbox" id="food" name="sub-category" value="food">
         <label for="food">Food</label>
-        <input type="radio" id="gay" name="sub-category" value="gay">
+        <input type="checkbox" id="gay" name="sub-category" value="gay">
         <label for="gay">Gay/Trans</label>
-        <input type="radio" id="lesbian" name="sub-category" value="lesbian">
+        <input type="checkbox" id="lesbian" name="sub-category" value="lesbian">
         <label for="lesbian">Lesbian/Trans</label>
 
-        <input type="radio" id="partialism" name="sub-category" value="partialism">
+        <input type="checkbox" id="partialism" name="sub-category" value="partialism">
         <label for="partialism">Partialism</label>
-        <input type="radio" id="POC" name="sub-category" value="POC">
+        <input type="checkbox" id="POC" name="sub-category" value="POC">
         <label for="POC">POC</label>
-        <input type="radio" id="political" name="sub-category" value="political">
+        <input type="checkbox" id="political" name="sub-category" value="political">
         <label for="political">Political</label>
 
-        <input type="radio" id="polyamours" name="sub-category" value="polyamours">
+        <input type="checkbox" id="polyamours" name="sub-category" value="polyamours">
         <label for="polyamours">Polyamours</label>
-        <input type="radio" id="sugardating" name="sub-category" value="sugardating">
+        <input type="checkbox" id="sugardating" name="sub-category" value="sugardating">
         <label for="sugardating">Sugardating</label>
         </div>
       <section class="box">
@@ -64,7 +64,7 @@
       <section class="box">
         <p class="free">Free</p>
         <div class="billede">
-          <img src="/img/badoo.webp" alt="tinder" />
+          <img src="/img/ashley_madison.webp" alt="tinder" />
         </div>
         <div class="indhold">
           <h2>Facebookdating</h2>
@@ -72,9 +72,10 @@
           <button>Read more</button>
         </div>
       </section>
-      <div class="heart">
-        <img src="/img/heart1.svg" alt="hjerte" />
+      <div class="heart-container">
+        <div class="heart-sprite"></div>
       </div>
-    </main>
+    </main> 
+    <script src="animation.js"></script>
   </body>
 </html>
