--- a/productlist.html
+++ b/productlist.html
@@ -72,8 +72,14 @@
           <button>Read more</button>
         </div>
       </section>
-      <div class="heart-container">
-        <div class="heart-sprite"></div>
+      <div class="heart1-container">
+        <div class="heart1-sprite"></div>
+      </div>
+      <div class="heart2-container">
+        <div class="heart2-sprite"></div>
+      </div>
+      <div class="heart3-container">
+        <div class="heart3-sprite"></div>
       </div>
     </main> 
     <script src="animation.js"></script>
