--- a/product.html
+++ b/product.html
@@ -24,26 +24,32 @@
         <section class="productInfo">
             <h1 class="name">Tinder</h1>
             <div class="box">
-                <h3>"Swipe Right"</h3>
-                <p>Tinder is a popular dating app with a simple and user-friendly interface that uses a location-based
-                    system to
-                    match
-                    users with others in their vicinity.
+                <div class="left">
+                    <h3>"Swipe Right"</h3>
+                    <p>Tinder is a popular dating app with a simple and user-friendly interface that uses a
+                        location-based
+                        system to
+                        match
+                        users with others in their vicinity.
+                        <br>
+                        It features a swiping system, where users swipe right to like a profile and left to pass.
+                        <br>
+                        If two users show mutual interest, a match is made, and they can start chatting within the app's
+                        messaging
+                        feature.
+                        <br>
+                        Premium features are also available for additional benefits.
+                    </p>
+                </div>
+                <div class="right">
+                    <img class="image" src="img/tinder.webp" alt="tinder">
+                    <p> <span class="users">75.000.000</span> USERS</p>
+                    <p>FOUNDED <span class="founded">01/01/2000</span></p>
+                    <p class="paymentreq">Free</p>
 
-                    It features a swiping system, where users swipe right to like a profile and left to pass.
-
-                    If two users show mutual interest, a match is made, and they can start chatting within the app's
-                    messaging
-                    feature.
-
-                    Premium features are also available for additional benefits.</p>
-                <img class="image" src="img/tinder.webp" alt="tinder">
-                <p> <span class="users">75.000.000</span> USERS</p>
-                <p>FOUNDED <span class="founded">01/01/2000</span></p>
-                <p class="paymentreq">Free</p>
-
-                <div class="website_button">
-                    <a target=blank href="https://tinder.com/">Start Swiping</a>
+                    <div class="website_button">
+                        <a target=blank href="https://tinder.com/">Start Swiping</a>
+                    </div>
                 </div>
             </div>
         </section>
