--- a/product.html
+++ b/product.html
@@ -22,11 +22,13 @@
     </header>
     <main>
         <section class="productInfo">
-            <h1 class="name">Tinder</h1>
+            <h1 id="name">Tinder</h1>
             <div class="box">
                 <div class="left">
-                    <h3>"Swipe Right"</h3>
-                    <p>Tinder is a popular dating app with a simple and user-friendly interface that uses a
+                    <h3 class="secondary">"Swipe Right"</h3>
+                    <p id="description" class="primary">Tinder is a popular dating app with a simple and user-friendly
+                        interface that
+                        uses a
                         location-based
                         system to
                         match
@@ -42,10 +44,10 @@
                     </p>
                 </div>
                 <div class="right">
-                    <img class="image" src="img/tinder.webp" alt="tinder">
-                    <p> <span class="users">75.000.000</span> USERS</p>
-                    <p>FOUNDED <span class="founded">01/01/2000</span></p>
-                    <p class="paymentreq">Free</p>
+                    <img id="image" src="img/tinder.webp" alt="tinder">
+                    <p class="secondary"> <span class="primary" id="users">75.000.000</span> USERS</p>
+                    <p class="secondary">FOUNDED <span class="primary" id="founded">01/01/2000</span></p>
+                    <p class="secondary" id="paymentreq">Free</p>
 
                     <div class="website_button">
                         <a target=blank href="https://tinder.com/">Start Swiping</a>
