--- a/productlist.html
+++ b/productlist.html
@@ -50,6 +50,8 @@
         <input type="checkbox" id="sugardating" name="sub-category" value="sugardating">
         <label for="sugardating">Sugardating</label>
         </div>
+
+
       <section class="box">
         <p class="free">Free</p>
         <div class="billede">
@@ -58,9 +60,11 @@
         <div class="indhold">
           <h2>Facebookdating</h2>
           <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
-          <button>Read more</button>
+          <a class="knap" href="product.html">Read more</a>
         </div>
       </section>
+
+
       <section class="box">
         <p class="free">Free</p>
         <div class="billede">
@@ -68,10 +72,13 @@
         </div>
         <div class="indhold">
           <h2>Facebookdating</h2>
-          <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
+          <h3 class="slogan">"The world's largest social networking app for gay, bi, trans and queer people "</h3>
           <button>Read more</button>
         </div>
       </section>
+
+
+
       <div class="heart1-container">
         <div class="heart1-sprite"></div>
       </div>
