--- a/product.html
+++ b/product.html
@@ -24,6 +24,9 @@
     <main>
         <section class="productInfo">
             <h1 id="name">Tinder</h1>
+            <div class="banner">
+                <p id="celebritiesOnSite"> "Grete fra Rødovre"</p>
+            </div>
             <div class="box">
                 <div class="right">
                     <img id="image" src="img/tinder.webp" alt="tinder">
