--- a/product.html
+++ b/product.html
@@ -54,7 +54,7 @@
                     </p>
                 </div>
                 <div class="website_button">
-                    <a target=blank href="https://tinder.com/">Start Swiping</a>
+                    <a target=blank href="https://tinder.com/">Go to site</a>
                 </div>
             </div>
         </section>
