rettelse af billeder

--- a/productlist.html
+++ b/productlist.html
@@ -50,28 +50,35 @@
         <input type="checkbox" id="sugardating" name="sub-category" value="sugardating">
         <label for="sugardating">Sugardating</label>
         </div>
+
       <section class="box">
         <p class="free">Free</p>
+        <p class="anbefalet">anbefalet af <br> Channing Tatum</p>
+
         <div class="billede">
-          <img src="/img/badoo.webp" alt="tinder" />
+          <img src="/img/tinder.webp" alt="tinder" />
         </div>
         <div class="indhold">
           <h2>Facebookdating</h2>
           <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
-          <button>Read more</button>
-        </div>
+        <a href="product.html">Read more</a>
+      </div>
       </section>
+
       <section class="box">
         <p class="free">Free</p>
+        <p class="anbefalet">anbefalet af <br> Channing Tatum</p>
         <div class="billede">
-          <img src="/img/ashley_madison.webp" alt="tinder" />
+          <img src="/img/bumble.webp" alt="tinder" />
         </div>
         <div class="indhold">
-          <h2>Facebookdating</h2>
-          <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
-          <button>Read more</button>
-        </div>
+          <h2>Bumble</h2>
+          <h3 class="slogan">"Tag det første skridt."</h3>
+        <a href="product.html">Read more</a>
+      </div>
       </section>
+
+
       <div class="heart1-container">
         <div class="heart1-sprite"></div>
       </div>
