--- a/categories.html
+++ b/categories.html
@@ -23,13 +23,13 @@
     <main>
         <h1>Categories</h1>
         <div class="grid_1-1">
-            <a class="category_box" href="productlist.html">Lgbt+</a>
+            <a class="category_box" href="productlist.html?category=Lgbt+">Lgbt+</a>
             <a class="category_box" href="productlist.html">Niche</a>
             <a class="category_box" href="productlist.html">Fetish</a>
             <a class="category_box" href="productlist.html">Conform</a>
         </div>
     </main>
-
+    <script src="categories.js"></script>
 </body>
 
 </html>
