det virker næsten

--- a/categories.html
+++ b/categories.html
@@ -29,7 +29,7 @@
             <a class="category_box" href="productlist.html">Conform</a>
         </div>
     </main>
-    <script src="categories.js"></script>
+    <!-- <script src="categories.js"></script> -->
 </body>
 
 </html>
