--- a/productlist.html
+++ b/productlist.html
@@ -52,21 +52,23 @@
           <label for="sugardating">Sugardating</label>
     </div>
 
-    <section class="box">
-      <p class="free">Free</p>
-      <p class="anbefalet">anbefalet af <br> Channing Tatum</p>
+    <template>
+      <section class="box">
+        <p class="free">Free</p>
+        <p class="anbefalet">anbefalet af <br> <span></span></p>
 
-      <div class="billede">
-        <img src="/img/tinder.webp" alt="tinder" />
-      </div>
-      <div class="indhold">
-        <h2>Facebookdating</h2>
-        <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
-        <a href="product.html">Read more</a>
-      </div>
-    </section>
+        <div class="billede">
+          <img src="/img/tinder.webp" alt="tinder" />
+        </div>
+        <div class="indhold">
+          <h2>Facebookdating</h2>
+          <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
+          <a href="product.html">Read more</a>
+        </div>
+      </section>
+    </template>
 
-    <section class="box">
+    <!-- <section class="box">
       <p class="free">Free</p>
       <p class="anbefalet">anbefalet af <br> Channing Tatum</p>
       <div class="billede">
@@ -77,7 +79,7 @@
         <h3 class="slogan">"Tag det første skridt."</h3>
         <a href="product.html">Read more</a>
       </div>
-    </section>
+    </section> -->
 
 
     <div class="heart1-container">
