--- a/product.html
+++ b/product.html
@@ -23,20 +23,21 @@
     </header>
     <main>
         <section class="productInfo">
-            <h1 id="name">Tinder</h1>
+            <h1 class="name">Tinder</h1>
             <div class="banner">
-                <p id="celebritiesOnSite"> "Grete fra Rødovre"</p>
+                <p class="celebritiesOnSite"> "Grete fra Rødovre"</p>
             </div>
             <div class="box">
                 <div class="right">
-                    <img id="image" src="img/tinder.webp" alt="tinder">
-                    <p class="secondary"> <span class="primary" id="users">75.000.000</span> USERS</p>
-                    <p class="secondary">FOUNDED <span class="primary" id="founded">01/01/2000</span></p>
-                    <p class="secondary" id="paymentreq">Free</p>
+                    <img class="image" src="img/tinder.webp" alt="tinder">
+                    <p class="secondary"> <span class="primary" class="users">75.000.000</span> USERS</p>
+                    <p class="secondary">FOUNDED <span class="primary" class="founded">01/01/2000</span></p>
+                    <p class="secondary" class="paymentreq">Free</p>
                 </div>
                 <div class="left">
                     <h3 class="secondary">"Swipe Right"</h3>
-                    <p id="description" class="primary">Tinder is a popular dating app with a simple and user-friendly
+                    <p class="description" class="primary">Tinder is a popular dating app with a simple and
+                        user-friendly
                         interface that
                         uses a
                         location-based
@@ -60,6 +61,7 @@
         </section>
 
     </main>
+    <script src="product.js"></script>
 </body>
 
 </html>
