work in progress

--- a/product.html
+++ b/product.html
@@ -24,13 +24,15 @@
     <main>
         <section class="productInfo">
             <h1 class="name">Tinder</h1>
-            <div class="banner">
+            <div>
                 <p class="celebritiesOnSite"> "Grete fra Rødovre"</p>
             </div>
             <div class="box">
                 <div class="right">
                     <img class="image" src="img/tinder.webp" alt="tinder">
-                    <p class="secondary"> <span class="primary" class="users">75.000.000</span> USERS</p>
+                    <p class="secondary">
+                        <span class="primary" class="users"></span> USERS
+                    </p>
                     <p class="secondary">FOUNDED <span class="primary" class="founded">01/01/2000</span></p>
                     <p class="secondary" class="paymentreq">Free</p>
                 </div>
