--- a/categories.html
+++ b/categories.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="img/datA-bae-favicon.svg" />
     <title>Categories</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="categories.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="categories.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo">
-            <a href="index.html">DatA-bae</a>
-        </div>
-        <div class="nav_button">
-            <a href="categories.html">Categories</a>
-            <a href="form.html">Add a site</a>
-        </div>
+      <div class="logo">
+        <a href="index.html">DatA-bae</a>
+      </div>
+      <div class="nav_button">
+        <a href="categories.html">Categories</a>
+        <a href="form.html">Add a site</a>
+      </div>
     </header>
     <main>
-        <h1>Categories</h1>
-        <div class="grid_1-1">
-            <a class="category_box" href="productlist.html">Lgbt+</a>
-            <a class="category_box" href="productlist.html">Niche</a>
-            <a class="category_box" href="productlist.html">Fetish</a>
-            <a class="category_box" href="productlist.html">Conform</a>
-        </div>
+      <h1>Categories</h1>
+      <div class="grid_1-1">
+        <a class="category_box" href="productlist.html">Lgbt+</a>
+        <a class="category_box" href="productlist.html">Niche</a>
+        <a class="category_box" href="productlist.html">Fetish</a>
+        <a class="category_box" href="productlist.html">Conform</a>
+      </div>
     </main>
-
-</body>
-
+  </body>
 </html>
