--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="img/datA-bae-favicon.svg" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>DatA-bae</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo">
-            <a href="index.html">DatA-bae</a>
-        </div>
-        <div class="nav_button">
-            <a href="categories.html">Categories</a>
-            <a href="form.html">Add a site</a>
-        </div>
+      <div class="logo">
+        <a href="index.html">DatA-bae</a>
+      </div>
+      <div class="nav_button">
+        <a href="categories.html">Categories</a>
+        <a href="form.html">Add a site</a>
+      </div>
     </header>
     <main>
-        <div id="front_text">
-            <h1>DatA-bae</h1>
-            <p>Love is in the App Store: <br> Let Us Help You Choose the <br> RIGHT ONE!</p>
-        </div>
+      <div id="front_text">
+        <h1>DatA-bae</h1>
+        <p>
+          Love is in the App Store: <br />
+          Let Us Help You Choose the <br />
+          RIGHT ONE!
+        </p>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
