--- a/productlist.html
+++ b/productlist.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="img/datA-bae-favicon.svg" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="productlist.css" />
     <title>DatA-bae</title>
