--- a/form.html
+++ b/form.html
@@ -1,52 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="img/datA-bae-favicon.svg" />
     <title>Add a site</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="form.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="form.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo">
-            <a href="index.html">DatA-bae</a>
-        </div>
-        <div class="nav_button">
-            <a href="categories.html">Categories</a>
-            <a href="form.html">Add a site</a>
-        </div>
+      <div class="logo">
+        <a href="index.html">DatA-bae</a>
+      </div>
+      <div class="nav_button">
+        <a href="categories.html">Categories</a>
+        <a href="form.html">Add a site</a>
+      </div>
     </header>
     <main>
-        <h1>Add Dating Site</h1>
-        <div class="formbox">
-            <form action="">
-                <label for="name">App Name:</label>
-                <input placeholder="Tinder" type="text">
-                <label for="slogan">Slogan:</label>
-                <input placeholder='"Start Swiping"' type="text">
-                <label for="">Category:</label>
-                <select name="category" id="category">
-                    <option value="choice">Choose category</option>
-                    <option value="LGBT+">LGBT+</option>
-                    <option value="Niche">Niche</option>
-                    <option value="Fetish">Fetish</option>
-                    <option value="Conform">Conform</option>
-                </select>
-                <label for="description">Description:</label><textarea placeholder="Max 200 characters (with spaces)"
-                    name="" rows="5" id="" cols="30" rows="10"></textarea>
-                <label for="founded">Founded:</label>
-                <input type="date">
-                <label for="free">Free to use:</label>
-                <input type="checkbox">
-                <button type="submit">Submit</button>
-            </form>
-        </div>
+      <h1>Add Dating Site</h1>
+      <div class="formbox">
+        <form action="">
+          <label for="name">App Name:</label>
+          <input placeholder="Tinder" type="text" />
+          <label for="slogan">Slogan:</label>
+          <input placeholder='"Start Swiping"' type="text" />
+          <label for="">Category:</label>
+          <select name="category" id="category">
+            <option value="choice">Choose category</option>
+            <option value="LGBT+">LGBT+</option>
+            <option value="Niche">Niche</option>
+            <option value="Fetish">Fetish</option>
+            <option value="Conform">Conform</option>
+          </select>
+          <label for="description">Description:</label><textarea placeholder="Max 200 characters (with spaces)" name="" rows="5" id="" cols="30" rows="10"></textarea>
+          <label for="founded">Founded:</label>
+          <input type="date" />
+          <label for="free">Free to use:</label>
+          <input type="checkbox" />
+          <button type="submit">Submit</button>
+        </form>
+      </div>
     </main>
-
-</body>
-
+  </body>
 </html>
