--- a/product.html
+++ b/product.html
@@ -24,19 +24,17 @@
     <main>
         <section class="productInfo">
             <h1 class="name">Tinder</h1>
-            <div class="banner">
-                <p class="celebritiesOnSite"> "Grete fra Rødovre"</p>
-            </div>
+            <p class="celebritiesOnSite banner"> "Grete fra Rødovre"</p>
             <div class="box">
                 <div class="right">
                     <img class="image" src="img/tinder.webp" alt="tinder">
-                    <p class="secondary"> <span class="primary" class="users">75.000.000</span> USERS</p>
-                    <p class="secondary">FOUNDED <span class="primary" class="founded">01/01/2000</span></p>
-                    <p class="secondary" class="paymentreq">Free</p>
+                    <p class="secondary"> <span class="users primary">75.000.000</span> USERS</p>
+                    <p class="secondary">FOUNDED <span class="founded primary">01/01/2000</span></p>
+                    <p class="paymentreq secondary">Free</p>
                 </div>
                 <div class="left">
                     <h3 class="secondary">"Swipe Right"</h3>
-                    <p class="description" class="primary">Tinder is a popular dating app with a simple and
+                    <p class="description primary">Tinder is a popular dating app with a simple and
                         user-friendly
                         interface that
                         uses a
