--- a/categories.html
+++ b/categories.html
@@ -23,10 +23,10 @@
     <main>
         <h1>Categories</h1>
         <div class="grid_1-1">
-            <a class="category_box" href="productlist.html?category=Lgbt+">Lgbt+</a>
-            <a class="category_box" href="productlist.html">Niche</a>
-            <a class="category_box" href="productlist.html">Fetish</a>
-            <a class="category_box" href="productlist.html">Conform</a>
+            <a class="category_box" href="productlist.html?category=LGBT">Lgbt+</a>
+            <a class="category_box" href="productlist.html?category=Niche">Niche</a>
+            <a class="category_box" href="productlist.html?category=Fetish">Fetish</a>
+            <a class="category_box" href="productlist.html?category=Standard">Conform</a>
         </div>
     </main>
     <!-- <script src="categories.js"></script> -->
