--- a/product.html
+++ b/product.html
@@ -25,35 +25,20 @@
         <section class="productInfo">
             <h1 class="name">Tinder</h1>
             <div>
-                <p class="celebritiesOnSite"> "Grete fra Rødovre"</p>
+                <p class="celebritiesOnSite">"Grete fra Rødovre"</p>
             </div>
             <div class="box">
                 <div class="right">
                     <img class="image" src="img/tinder.webp" alt="tinder">
                     <p class="secondary">
-                        <span class="primary" class="users"></span> USERS
+                        <span class="primary users"></span> USERS
                     </p>
-                    <p class="secondary">FOUNDED <span class="primary" class="founded">01/01/2000</span></p>
-                    <p class="secondary" class="paymentreq">Free</p>
+                    <p class="secondary">FOUNDED <span class="primary founded">xxx</span></p>
+                    <p class="secondary paymentreq">Free</p>
                 </div>
                 <div class="left">
-                    <h3 class="secondary">"Swipe Right"</h3>
-                    <p class="description" class="primary">Tinder is a popular dating app with a simple and
-                        user-friendly
-                        interface that
-                        uses a
-                        location-based
-                        system to
-                        match
-                        users with others in their vicinity.
-                        <br>
-                        It features a swiping system, where users swipe right to like a profile and left to pass.
-                        <br>
-                        If two users show mutual interest, a match is made, and they can start chatting within the app's
-                        messaging
-                        feature.
-                        <br>
-                        Premium features are also available for additional benefits.
+                    <h3 class="secondary">xxx</h3>
+                    <p class="description primary">xxx
                     </p>
                 </div>
                 <div class="website_button">
