--- a/productlist.html
+++ b/productlist.html
@@ -93,7 +93,7 @@
   <div class="heart3-container">
     <div class="heart3-sprite"></div>
   </div>
-  <script src="productlist"></script>
+  <script src="productlist.js"></script>
   <script src="animation.js"></script>
 </body>
 
