--- a/productlist.html
+++ b/productlist.html
@@ -61,8 +61,8 @@
           <img src="/img/tinder.webp" alt="tinder" />
         </div>
         <div class="indhold">
-          <h2>Facebookdating</h2>
-          <h3 class="slogan">"The world's larges social networking app for gay, bi, trans and queer people "</h3>
+          <h2>xxx</h2>
+          <h3 class="slogan">xxx</h3>
           <a href="product.html">Read more</a>
         </div>
       </section>
