--- a/product.html
+++ b/product.html
@@ -1,54 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="product.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="product.css" />
     <title>Product</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo">
-            <a href="index.html">DatA-bae</a>
-        </div>
-        <div class="nav_button">
-            <a href="categories.html">Categories</a>
-            <a href="form.html">Add a site</a>
-        </div>
+      <div class="logo">
+        <a href="index.html">DatA-bae</a>
+      </div>
+      <div class="nav_button">
+        <a href="categories.html">Categories</a>
+        <a href="form.html">Add a site</a>
+      </div>
     </header>
     <main>
-        <section class="productInfo">
-            <h1 class="name">Tinder</h1>
-            <div>
-                <p class="celebritiesOnSite">"Grete fra Rødovre"</p>
-            </div>
-            <div class="box">
-                <div class="right">
-                    <img class="image" src="img/tinder.webp" alt="tinder">
-                    <p class="secondary">
-                        <span class="primary users"></span> USERS
-                    </p>
-                    <p class="secondary">FOUNDED <span class="primary founded">xxx</span></p>
-                    <p class="secondary paymentreq">Free</p>
-                </div>
-                <div class="left">
-                    <h3 class="secondary">xxx</h3>
-                    <p class="description primary">xxx
-                    </p>
-                </div>
-                <div class="website_button">
-                    <a target=blank href="https://tinder.com/">Go to site</a>
-                </div>
-            </div>
-        </section>
-
+      <section class="productInfo">
+        <h1 class="name">Tinder</h1>
+        <p class="celebritiesOnSite">"Grete fra Rødovre"</p>
+        <div class="box">
+          <div class="right">
+            <img class="image" src="img/tinder.webp" alt="tinder" />
+            <p class="secondary"><span class="primary users"></span> USERS</p>
+            <p class="secondary">FOUNDED <span class="primary founded">xxx</span></p>
+            <p class="secondary paymentreq">Free</p>
+          </div>
+          <div class="left">
+            <h3 class="secondary">xxx</h3>
+            <p class="description primary">xxx</p>
+          </div>
+          <div class="website_button">
+            <a target="blank" href="https://tinder.com/">Go to site</a>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="product.js"></script>
-</body>
-
+  </body>
 </html>
