--- a/product.html
+++ b/product.html
@@ -24,21 +24,19 @@
     <main>
         <section class="productInfo">
             <h1 class="name">Tinder</h1>
-            <div>
-                <p class="celebritiesOnSite">"Grete fra Rødovre"</p>
-            </div>
             <div class="box">
+                <p class="celebritiesOnSite">"Grete fra Rødovre"</p>
                 <div class="right">
                     <img class="image" src="img/tinder.webp" alt="tinder">
                     <p class="secondary">
                         <span class="primary users"></span> USERS
                     </p>
-                    <p class="secondary">FOUNDED <span class="primary founded">xxx</span></p>
+                    <p class="secondary">FOUNDED <span class="primary founded"></span></p>
                     <p class="secondary paymentreq">Free</p>
                 </div>
                 <div class="left">
-                    <h3 class="secondary">xxx</h3>
-                    <p class="description primary">xxx
+                    <h3 class="secondary"></h3>
+                    <p class="description primary">
                     </p>
                 </div>
                 <div class="website_button">
