--- a/productlist.html
+++ b/productlist.html
@@ -22,7 +22,7 @@
     </div>
   </header>
   <main>
-    <h1>Category</h1>
+    <h1></h1>
     <div class="checkbox-box">
       <form action="/action_page.php">
           <input type="checkbox" id="affair" name="sub-category" value="affair">
@@ -60,15 +60,15 @@
           <img src="/img/tinder.webp" alt="tinder" />
         </div>
         <div class="indhold">
-          <h2>xxx</h2>
-          <h3 class="slogan">xxx</h3>
+          <h2></h2>
+          <h3 class="slogan"></h3>
           <a href="product.html">Read more</a>
         </div>
-        <p class="anbefalet">Anbefalet af <br> <span></span></p> 
+        <p class="anbefalet">Recommended by <br> <span></span></p>
       </section>
     </template>
 
-     <!-- <section class="box">
+    <!-- <section class="box">
       <p class="free">Free</p>
       <p class="anbefalet">anbefalet af <br> Channing Tatum</p>
       <div class="billede">
@@ -79,10 +79,10 @@
         <h3 class="slogan">"Tag det første skridt."</h3>
         <a href="product.html">Read more</a>
       </div>
-    </section> --> 
+    </section> -->
 
 
-  
+
   </main>
   <div class="heart1-container">
     <div class="heart1-sprite"></div>
