--- a/product.html
+++ b/product.html
@@ -23,18 +23,18 @@
   </header>
   <main>
     <section class="productInfo">
-      <h1 class="name">Tinder</h1>
-      <p class="celebritiesOnSite">"Grete fra Rødovre"</p>
+      <h1 class="name"></h1>
+      <p class="celebritiesOnSite"></p>
       <div class="box">
         <div class="right">
-          <img class="image" src="img/tinder.webp" alt="tinder" />
+          <img class="image" src="" alt="" />
           <p class="secondary"><span class="primary users"></span> USERS</p>
-          <p class="secondary">FOUNDED <span class="primary founded">xxx</span></p>
+          <p class="secondary">FOUNDED <span class="primary founded"></span></p>
           <p class="secondary paymentreq">Free</p>
         </div>
         <div class="left">
-          <h3 class="secondary">xxx</h3>
-          <p class="description primary">xxx</p>
+          <h3 class="secondary"></h3>
+          <p class="description primary"></p>
         </div>
         <div class="website_button">
           <a target="blank" href="https://tinder.com/">Go to site</a>
