--- a/product.html
+++ b/product.html
@@ -37,7 +37,7 @@
           <p class="description primary"></p>
         </div>
         <div class="website_button">
-          <a target="blank" href="https://tinder.com/">Go to site</a>
+          <a target="blank" href="">Go to site</a>
         </div>
       </div>
     </section>
