--- a/productlist.html
+++ b/productlist.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="productlist.css" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <title>DatA-bae</title>
 </head>
 
